modify sublime settings

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,5 +18,6 @@
   hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
   type = cat-file -t
   dump = cat-file -p
+  yolo = push origin master
 [credential]
   helper = osxkeychain
