--- a/.gitconfig
+++ b/.gitconfig
@@ -1,14 +1,16 @@
 [user]
-  name = Justin Zimmerman
-  email = zimmy130@gmail.com
-[color]
-  ui = auto
+	name = Justin Zimmerman
+	email = zimmy130@gmail.com
 [core]
-  editor = vim
-  autocrlf = input
-  safecrlf = true
+	editor = vim
+	excludesfile = ~/.gitignore
+[init]
+	defaultBranch = main
 [help]
-  # Automatically correct and execute mistyped commands
+	autocorrect = 1
+[color]
+	ui = auto
+[help]
   autocorrect = 1
 [alias]
   co = checkout
@@ -16,9 +18,10 @@
   st = status
   br = branch
   hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
-  type = cat-file -t
-  dump = cat-file -p
 [credential]
   helper = osxkeychain
-[init]
-	defaultBranch = main
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
