--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,10 @@
 font-family = JetBrainsMono Nerd Font
 font-size = 14
 
+font-feature = -calt
+font-feature = -liga
+font-feature = -dlig
+
 theme = tokyonight
 
 window-height = 40
