--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,7 +5,7 @@ font-feature = -calt
 font-feature = -liga
 font-feature = -dlig
 
-theme = tokyonight
+theme = NightOwlDark
 
 window-height = 40
 window-width = 160
